--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -4,6 +4,9 @@
   <strong>Image:</strong>
   <%= image_tag @picture.image.url %>
 </p>
-
+<p class = "dateil-top">
+  <strong>Comment:</strong>
+  <%= @picture.comment%>
+</p>
 <%= link_to 'Edit', edit_picture_path(@picture) %> |
 <%= link_to 'Back', pictures_path %>
