--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= picture.image %></td>
         <td><%= picture.comment %></td>
-        <%# <td><%= picture.user %></td> %>
+        <td><%= picture.user&.name %></td>
         <td><%= link_to 'Show', picture %></td>
         <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
         <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
