--- a/app/views/pictures/confirm.html.erb
+++ b/app/views/pictures/confirm.html.erb
@@ -1,8 +1,12 @@
 <h1>確認画面</h1>
 <%= form_with(model: @picture, url: pictures_path, local: true) do |form| %>
   <!-- 確認画面でアップロードした画像を表示させるための記述 -->
+  <%= form.label :image %> <!-- 追記 k.nomura -->
   <%= image_tag(@picture.image.url) if @picture.image && @picture.image.url %>
   <%= form.hidden_field :image_cache %>
+  <%= form.label :comment %> <!-- 追記 k.nomura -->
+  <%= form.hidden_field :comment %> <!-- 追記 k.nomura -->
+  <%= @picture.comment %> <!-- 追記 k.nomura -->
   <%= form.submit "投稿する" %>
 <% end %>
 <%= form_with(model:@picture, url:new_picture_path, local:true, method:"get") do |form| %>
