--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,30 @@
   </head>
 
   <body>
-    <% flash.each do |key, value| %>
-      <%= content_tag(:div, value, class: "#{key}") %>
-    <% end %>
-    <% if logged_in? %>
-      <%= link_to "Profile", user_path(current_user.id) %>
-      <%= link_to "Logout", session_path(current_user.id), method: :delete %>
-    <% else %>
-      <%= link_to "Sign up", new_user_path %>
-      <%= link_to "Login", new_session_path %>
-    <% end %>
-    <%= yield %>
+    <header class="header clearfix">
+      <% flash.each do |key, value| %>
+        <%= content_tag(:div, value, class: "#{key}") %>
+      <% end %>
+      <% if logged_in? %>
+        <%= link_to "Profile", user_path(current_user.id), class: "left" %>
+        <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+      <% else %>
+        <%= link_to "Sign up", new_user_path %>
+        <%= link_to "Login", new_session_path %>
+      <% end %>
+    </header>
+    <section class="main-header">
+      <%= image_tag 'facebook_clone_title.png' %>
+      <%# <img src="/app/assets/images/img2.jpg" alt="diving画像"> %><!--これだと表示されない-->
+    </section>
+    <section class="view_part"> 
+      <%= yield %>
+    </section>
+    <footer>
+      <div>
+        <p>運営会社DIVE INTO CODE株式会社</p>
+        <p>© 2015-2018 Copyright DIVE INTO CODE Corp.</p>
+      </div>
+    </footer>
   </body>
 </html>
