footerをコメントアウト

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,11 +29,11 @@
     <section class="view_part"> 
       <%= yield %>
     </section>
-    <footer>
+    <%# <footer>
       <div>
         <p>運営会社DIVE INTO CODE株式会社</p>
         <p>© 2015-2018 Copyright DIVE INTO CODE Corp.</p>
       </div>
-    </footer>
+    </footer> %>
   </body>
 </html>
