--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Favorites#index</h1>
-<p>Find me in app/views/favorites/index.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<h1>Favorite Pictures</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Image</th>
+      <th>Comment</th>
+      <th>User</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @pictures.each do |picture| %>
+      <tr>
+        <td><%= image_tag picture.image.url , class: "index-img" %></td>
+        <td><%= picture.comment %></td>
+        <td><%= picture.user&.name %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'Back', pictures_path %>
