--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -19,8 +19,10 @@
         <td><%= picture.comment %></td>
         <td><%= picture.user&.name %></td>
         <td><%= link_to 'Show', picture %></td>
-        <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
-        <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if current_user.id == picture.user_id %>
+          <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
+          <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
