--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -16,5 +16,7 @@
     <%= link_to 'お気に入りする', favorites_path(picture_id: @picture.id), method: :post, class: 'btn btn-primary' %>
   <% end %>
 <% end %>
-<%= link_to 'Edit', edit_picture_path(@picture) %> |
+<% if current_user.id == @picture.user_id %>
+  <%= link_to 'Edit', edit_picture_path(@picture) %> |
+<% end %>
 <%= link_to 'Back', pictures_path %>
