Userの編集画面・機能実装

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @user.name %>のページ</h1>
 <p>メールアドレス: <%= @user.email %></p>
 <p><%= link_to 'picture画面へ', pictures_path %></p>
+<br>
+<td><%= link_to 'Edit', edit_user_path(@user) %></td>
