--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,10 +13,16 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :email %>
-  <%= f.email_field :email %>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
+  <% if action_name == 'new' %>
+    <%= f.email_field :email %>
+  <% else %>
+    <%= f.email_field :email, readonly: true %>
+  <% end %> 
+  <%# <% if action_name == 'new' %>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
+  <%# <% end %>
   <%= f.submit "Create my account" %>
 <% end %>
