config\master.keyを追加(クローン元fbcloneから)。お気に入りへのリンクを追加。

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Pictures</h1>
-
+<%= link_to 'Favorite Pictures', favorites_path %>
 <table>
   <thead>
     <tr>
