Userコントローラに他人のプロフィール変更アクセス制限追加。Viewでのボタン非表示も。

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,6 @@
 </div>
 <p><%= link_to 'picture画面へ', pictures_path %></p>
 <br>
-<td><%= link_to 'Edit', edit_user_path(@user) %></td>
+<% if current_user.id == @user.id %>
+  <td><%= link_to 'Edit', edit_user_path(@user) %></td>
+<% end %>
