登録時に画像指定ないとcomfirm画面からnew画面に戻すようにした

--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -12,6 +12,7 @@
   <% end %>
 
   <div class="field">
+    <p><%= notice %></p>
     <%= form.label :image %>
     <!-- 確認画面から新規作成画面に戻った時に、 -->
     <!-- アップロードした画像を表示させるための記述 -->
