ja.ymlに追記。各ビューでt('pictures.Image')の形で呼び出すように修正

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Pictures</h1>
+<h1><%= t('pictures.Pictures') %></h1>
 <%= link_to 'Favorite Pictures', favorites_path %>
 <table>
   <thead>
     <tr>
-      <th>Image</th>
-      <th>Comment</th>
-      <th>User</th>
+      <th><%= t('pictures.Image') %></th>
+      <th><%= t('pictures.Comment') %></th>
+      <th><%= t('pictures.User') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
