--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Favorite Pictures</h1>
+<h1><%= t('favorites.FavoritePictures') %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Image</th>
-      <th>Comment</th>
-      <th>User</th>
+      <th><%= t('application.Image') %></th>
+      <th><%= t('application.Comment') %></th>
+      <th><%= t('application.User') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
