--- a/app/views/pictures/confirm.html.erb
+++ b/app/views/pictures/confirm.html.erb
@@ -1,4 +1,4 @@
-<h1>確認画面</h1>
+<h1><%= t('pictures.Confirm') %></h1>
 <%= form_with(model: @picture, url: pictures_path, local: true) do |form| %>
   <!-- 確認画面でアップロードした画像を表示させるための記述 -->
   <%= form.label :image %> <!-- 追記 k.nomura -->
